[package]
name = "tuya-bulb-screen-color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-thief = "0.2.2"
colors-transform = "0.2.11"
env_logger = "0.11.3"
image = { version = "0.23.14", features = ["jpeg", "png"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
rust-tuyapi = "0.9.0"
scrap = "0.5.0"
serde = "1.0.198"
serde_json = "1.0.116"
